<resources>
    <string name="app_name">ስንኝ</string>
    <string name="trending_header">Trending</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--    post dummy data-->
    <string name="post_author">James Carter Brown</string>
    <string name="post_title">Roots in everyone heart</string>
    <string name="post_content">
        <br>There is a tree</br>
        <br>A wonderful tree.</br>
        <br>The tree of kindness.</br>
        <br>It is the fastest growing tree</br>
        <br>In this world, God bless</br>
        <br>There is a tree</br>
        <br>A wonderful tree.</br>
        <br>The tree of kindness.</br>
        <br>It is the fastest growing tree</br>
        <br>In this world, God bless</br>

    </string>
    <string name="f_name_hint">first name</string>
    <string name="l_name_hint">last name</string>
    <string name="register_phone_number">Phone number</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="post_content2">lroem ipsum dur;DH liahg dsjhgaksdjfh gkahsdf</string>
    <string name="poem">Poem</string>
    <string name="poem_hint">Poem here</string>
    <string name="title">Title</string>
    <string name="skip">Skip</string>

</resources>
