<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="20dp"
        android:background="@drawable/rounded_post_cards"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/trending_card_image_container"
                android:background="@drawable/profile_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="2dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:src="@drawable/trending_image2"
                    android:id="@+id/card_profile_picture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/post_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/post_author"
                android:textColor="@color/text_grey"
                android:textSize="17sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:layout_marginVertical="20dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:text="@string/post_content"
            android:textColor="@color/text_grey" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>