<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/main_theme_color">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poem"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_light"
        android:textSize="@dimen/text_size" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="70dp"
        android:id="@+id/title"
        android:hint="@string/title"
        android:textSize="@dimen/t_size"
        android:textColorHint="@color/color_hint"
        android:paddingLeft="@dimen/pl"
        android:background="@drawable/text_style"
        />
    <EditText
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/text_style"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="@dimen/pl2"
        android:gravity="start"
        android:layout_weight="1"
        android:hint="@string/poem_hint"
        android:textSize="25dp"
        android:textColorHint="@color/color_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textSize="21.33dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="By:"
            android:gravity="center_horizontal" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:src="@drawable/trending_image2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:id="@+id/loged_in"
            android:textSize="17.33dp"
            android:text="          "
            android:gravity="center"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <Button
        android:id="@+id/add_post"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:fontFamily="@font/montserrat_light"
        android:text="Post Poem"
        android:textAllCaps="false"
        android:textColor="@color/black"/>
</LinearLayout>